first commit CRUD configuration

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,8 @@
 body {
-    background-color: lightgray;
+    background-color: rgb(4, 8, 26);
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
